<resources>
    <string name="app_name">Automart</string>

    <string name="dot">\u2022</string>
    <string name="sample_features">2004 \u2022 48000km \u2022 Manual</string>
    <string name="sample_description">
        This car is in tip-top shape and has been serviced and maintained by general motors
        since purchase. It is mechanically sound with a still impeccable paint job that
        makes it look as good as new. Feel free to make any inquiry
    </string>

    <string name="play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="notifications">Notifications</string>
    <string name="news_and_updates">News &amp; updates</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_app">Rate app</string>
    <string name="send_feedback">Send Feedback</string>

    <string name="image">image</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="terms">Terms and Conditions</string>
    <string name="agree_to_terms">I accept the</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Full name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="basic_information">Basic information</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="body_type">Body Type</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="car_details">Car details</string>
    <string name="transmission">Transmission</string>
    <string name="drive_type">Drive Type</string>
    <string name="cc">Engine capacity</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="mileage">Mileage</string>
    <string name="car_features">Car features</string>
    <string name="engine">Engine</string>
    <string name="naturally_aspirated">Naturally aspirated</string>
    <string name="turbo_charged">Turbo charged</string>
    <string name="supercharged">Supercharged</string>
    <string name="safety">Safety</string>
    <string name="airbags">Airbags</string>
    <string name="abs">Anti-lock brakes</string>
    <string name="fog_lamps">Fog lamps</string>
    <string name="reverse_camera">Reverse camera</string>
    <string name="interior">Interior</string>
    <string name="leather_upholstery">Leather upholstery</string>
    <string name="electric_windows">Electric windows</string>
    <string name="cups">Cup holders</string>
    <string name="air_conditioning">Air conditioning</string>
    <string name="tinted">Tinted windows</string>
    <string name="extras">Extras</string>
    <string name="sunroof">Sunroof</string>
    <string name="keyless_entry">Keyless entry</string>
    <string name="alloys">Alloy wheels</string>
    <string name="power">Power steering</string>
    <string name="upload_photos">Upload photos</string>
    <string name="add_atleast_5_photos">(Add atleast 5 photos)</string>
    <string name="add_atleast_2_photos">(Add atleast 2 photos)</string>
    <string name="choose_photos">Choose photos</string>
    <string name="info">Information</string>
    <string name="desc">Description</string>
    <string name="add_desc">Add a description about the car...</string>
    <string name="add_part_desc">Add a description about the part...</string>
    <string name="asking_price">Asking price</string>
    <string name="location">Location</string>
    <string name="post_car">Post car</string>
    <string name="title">Title</string>
    <string name="part_info">Part information</string>
    <string name="part_details">Part details</string>
    <string name="condition">Condition</string>
    <string name="category">Category</string>
    <string name="part_number">Part number</string>
    <string name="post_part">Post part</string>
    <string name="vehicle_make">Vehicle make</string>
    <string name="vehicle_model">Vehicle model</string>
    <string name="no_cars_uploaded_yet">No cars added yet</string>
    <string name="no_cars_posted_yet">No cars posted yet</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_available">Quantity available</string>
    <string name="no_parts_added_yet">No parts added yet</string>
    <string name="no_parts_posted_yet">No parts posted yet</string>
    <string name="no_chats">No chats added yet</string>
    <string name="no_messages_added_yet">No messages added yet</string>
    <string name="how_many_parts_do_you_need">How many parts do you need?</string>
    <string name="delivery_location">Enter delivery location</string>
    <string name="date">Date</string>
    <string name="which_date_would_you_like_to_book">Which date would you like to book?</string>
    <string name="time">Time</string>
    <string name="what_time_would_you_like_to_book">What time would you like to book?</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>

    <string-array name="holder">
        <item name="category">Please select</item>
    </string-array>

    <string-array name="makes">
        <item name="toyota">Toyota</item>
        <item name="mazda">Mazda</item>
        <item name="subaru">Subaru</item>
        <item name="honda">Honda</item>
        <item name="benz">Mercedes Benz</item>
        <item name="bmw">BMW</item>
    </string-array>

    <string-array name="mazda">
        <item name="premacy">Premacy</item>
        <item name="demio">Demio</item>
        <item name="axela">Axela</item>
        <item name="cx5">CX-5</item>
        <item name="atenza">Atenza</item>
        <item name="verisa">Verisa</item>
    </string-array>

    <string-array name="subaru">
        <item name="legacy">Legacy</item>
        <item name="outback">Outback</item>
        <item name="forester">Forester</item>
        <item name="imprezza">Imprezza</item>
        <item name="xv">XV</item>
        <item name="exiga">Exiga</item>
    </string-array>

    <string-array name="honda">
        <item name="fit">Fit</item>
        <item name="airwave">Airwave</item>
        <item name="civic">Civic</item>
        <item name="crv">CR-V</item>
        <item name="crossroad">Crossroad</item>
        <item name="accord">Accord</item>
    </string-array>

    <string-array name="benz">
        <item name="c200">C200</item>
        <item name="e250">E250</item>
        <item name="a180">A180</item>
        <item name="ml350">ML350</item>
        <item name="c250">C250 Coupe</item>
        <item name="gl300">GL300</item>
    </string-array>

    <string-array name="bmw">
        <item name="318">318i</item>
        <item name="325">325i</item>
        <item name="525">535i</item>
        <item name="x5">X5</item>
        <item name="x6">X6</item>
        <item name="m5">M5</item>
    </string-array>

    <string-array name="toyota">
        <item name="corolla">Corolla</item>
        <item name="premio">Premio</item>
        <item name="fielder">Fielder</item>
        <item name="prado">Landcruiser Prado</item>
        <item name="harrier">Harrier</item>
        <item name="hilux">Hilux</item>
        <item name="prado">Landcruiser Prado</item>
        <item name="nze">NZE</item>
        <item name="axio">Axio</item>
        <item name="vitz">Vitz</item>
    </string-array>

    <string-array name="condition">
        <item name="new">Brand New</item>
        <item name="used">Used</item>
    </string-array>

    <string-array name="category">
        <item name="accessories">Accessories</item>
        <item name="body">Body &amp; Trim</item>
        <item name="braking">Braking</item>
        <item name="cooling">Cooling</item>
        <item name="engine">Engine</item>
        <item name="fluids">Fluids</item>
        <item name="suspension">Suspension</item>
        <item name="transmission">Transmission</item>
        <item name="wheels">Wheels &amp; Tyres</item>
    </string-array>

    <string-array name="year">
        <item name="98">1998</item>
        <item name="99">1999</item>
        <item name="00">2000</item>
        <item name="01">2001</item>
        <item name="02">2002</item>
        <item name="03">2003</item>
        <item name="04">2004</item>
        <item name="05">2005</item>
        <item name="06">2006</item>
        <item name="07">2007</item>
        <item name="08">2008</item>
        <item name="09">2009</item>
        <item name="10">2010</item>
        <item name="11">2011</item>
        <item name="12">2012</item>
        <item name="13">2013</item>
        <item name="14">2014</item>
        <item name="15">2015</item>
        <item name="16">2016</item>
        <item name="17">2017</item>
        <item name="18">2018</item>
    </string-array>

    <string-array name="body">
        <item name="hatchback">Hatchback</item>
        <item name="sedan">Sedan</item>
        <item name="convertible">Convertible</item>
        <item name="suv">SUV/Crossover</item>
        <item name="wagon">Wagon</item>
        <item name="pickup">Pickup</item>
    </string-array>

    <string-array name="fuel">
        <item name="petrol">Petrol</item>
        <item name="diesel">Diesel</item>
        <item name="electric">Electric</item>
        <item name="hybrid">Hybrid</item>
    </string-array>

    <string-array name="transmission">
        <item name="auto">Automatic</item>
        <item name="manual">Manual</item>
        <item name="cvt">CVT</item>
    </string-array>

    <string-array name="drive">
        <item name="2wd">2WD</item>
        <item name="4wd">4WD</item>
        <item name="awd">AWD</item>
    </string-array>

</resources>
