<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity"
    android:background="@color/light_background">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        style="?android:actionBarStyle"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:padding="@dimen/settings_header_padding"/>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_padding"
                android:id="@+id/notifications"
                android:text="@string/notifications"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"/>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_padding"
                android:id="@+id/news"
                android:text="@string/news_and_updates"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:padding="@dimen/settings_header_padding"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:onClick="onClick"
                android:id="@+id/about"
                style="@style/SettingsTile"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_use"
                android:onClick="onClick"
                android:id="@+id/terms"
                style="@style/SettingsTile"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:id="@+id/privacy"
                android:onClick="onClick"
                style="@style/SettingsTile"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                android:id="@+id/rate"
                android:onClick="onClick"
                style="@style/SettingsTile"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:id="@+id/feedback"
                android:onClick="onClick"
                style="@style/SettingsTile"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/exit"
                android:onClick="onClick"
                style="@style/SettingsTile"/>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>