<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/quantity"/>

    <EditText
        android:id="@+id/orderQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="top|start"
        android:background="@drawable/et_background_plain"
        android:textColor="@color/primaryText"
        android:inputType="number"
        android:hint="@string/how_many_parts_do_you_need"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/location"/>

    <EditText
        android:id="@+id/orderLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="top|start"
        android:background="@drawable/et_background_plain"
        android:textColor="@color/primaryText"
        android:inputType="text"
        android:hint="@string/delivery_location"/>

</LinearLayout>