<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/date"/>

    <EditText
        android:id="@+id/orderDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="top|start"
        android:background="@drawable/et_background_plain"
        android:textColor="@color/primaryText"
        android:inputType="text"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/which_date_would_you_like_to_book"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/time"/>

    <EditText
        android:id="@+id/orderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="top|start"
        android:background="@drawable/et_background_plain"
        android:textColor="@color/primaryText"
        android:inputType="text"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/what_time_would_you_like_to_book"/>

</LinearLayout>